# iot_identification

./: .gitignore  README.md  config.json  config.py  mac_address_map.json  pyproject.toml  requirements.txt
.github/workflows/: run.yml
datasets/alexa_swan_kettle/: alexa_swan_kettle_000.csv  alexa_swan_kettle_001.csv  alexa_swan_kettle_002.csv  alexa_swan_kettle_003.csv  alexa_swan_kettle_004.csv  alexa_swan_kettle_005.csv  alexa_swan_kettle_006.csv  alexa_swan_kettle_007.csv  alexa_swan_kettle_008.csv  alexa_swan_kettle_009.csv  alexa_swan_kettle_010.csv  alexa_swan_kettle_011.csv  alexa_swan_kettle_012.csv  alexa_swan_kettle_013.csv  alexa_swan_kettle_014.csv  alexa_swan_kettle_015.csv  alexa_swan_kettle_016.csv  alexa_swan_kettle_017.csv  alexa_swan_kettle_018.csv  alexa_swan_kettle_019.csv  alexa_swan_kettle_020.csv  alexa_swan_kettle_021.csv  alexa_swan_kettle_022.csv  alexa_swan_kettle_023.csv  alexa_swan_kettle_024.csv  alexa_swan_kettle_025.csv  alexa_swan_kettle_026.csv  alexa_swan_kettle_027.csv  alexa_swan_kettle_028.csv  (+782 more)
docs/: fast_training_pipeline.md  feature_engineering.md  models.md  overfitting.md  storage_and_caching.md  testing.md  time_collection.md  unsw_dataset.md
scripts/: filter_pcaps.sh  preprocess.sh  raw_data.sh  setup.sh  setup_hooks.sh  train_model.sh  unsw_dataset.sh
src/: collection_time_analysis.py  exceptions.py  utils.py
tests/: conftest.py  dummy_model.py  helpers.py  test_binary_model.py  test_extraction.py  test_fast_pipeline.py  test_model.py  test_models.py  test_multiclass_model.py  test_unseen.py  test_unsw_dataset.py
(+15614 files in other folders)
