[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-identification"
version = "0.1.0"
description = "IoT device identification using DoH replay and ML features"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# Runtime dependencies
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include configs/yaml/json files in the install
"doh_iot" = ["*.yml", "*.json"]

[tool.pytest.ini_options]
pythonpath = [
  ".",          # allow imports like "import config"
  "src"         # allow imports like "from src.ml import ..."
]
addopts = "-v"
testpaths = [
  "tests"
]
markers = [
  "integration: mark test as an integration test (runs longer and uses real data)",
  "slow: mark test as slow (optional)"
]
